--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,18 @@ version: '3.8'
 services:
   news-system:
     build: .
-    ports:
-      - "5000:5000"
-    # volumes:
-    #   - .:/app
+    network_mode: "host"
     environment:
       - FLASK_ENV=production
       - NEWS_API_KEY=${NEWS_API_KEY}
     devices:
       - "/dev/snd:/dev/snd"
+      - "/dev/mem:/dev/mem"
+      - "/dev/gpiomem:/dev/gpiomem"
+    privileged: true
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
