--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,10 @@ flask-cors==3.0.10
 pydub==0.25.1
 nagisa==0.2.8
 PyAudio==0.2.11
+RPi.GPIO==0.7.0
+Flask-SocketIO==5.3.2
+python-socketio==5.7.2
+gunicorn==20.1.0
+eventlet==0.33.3
+dnspython>=1.15.0,<2.0.0
 
